# libpst

./: .hgtags  510sg.schema  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.coverity  Makefile.cvs  NEWS  README  Setup1.vdproj  TODO  configure.in  define.h  libpst.c  libpst.h  libpst.pc.in  libpst.spec.in  lspst.c  lzfu.c  moz-script  nick2ldif.cpp  notes  package  pst2ldif.c  pst2ldif.cpp  readlog.vcproj  readpst.1  readpst.c  readpstlog.1  test.bash  w32pst.sln
archive/: 053.diff  64.bit.documentation  libpst.c.diff  patch1  readpst.c.diff  readpst.c.short_filename.diff  svn.snap.diff
contrib/: Makefile
debian/: Makefile.am  Makefile.in  changelog  changelog.in  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libpst-default.ex  libpst-dev.install  libpst.dirs  libpst.doc-base.EX  libpst.docs  libpst.install  libpst.spec  libpst1.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  readpst.dirs  readpst.install  rules  watch  watch.ex
debian/patches/: 05-disable-debian-gen.patch  10-current-attach.patch
html/: Makefile.am
info/: Makefile.am
libpst/: Makefile.am  config.h
m4/: ac_python_devel.m4  ax_boost_python.m4  ax_python.m4
man/: Makefile.am  readpst.1  readpstlog.1
python/: Makefile.am  python-libpst.cpp  test.py
regression/: regression-tests.bash
src/: Makefile.am  XGetopt.c  XGetopt.h  common.h  debug.c  define.h  deltasearch.cpp  dumpblocks.c  generic.c  generic.h  getidblock.c  libpst.c  libpst.h  libstrfunc.c  libstrfunc.h  lspst.c  lzfu.c  lzfu.h  msg.cpp  msg.h  nick2ldif.cpp  pst2dii.cpp.in  pst2ldif.cpp  readpst.c  readpstlog.c  testdebug.c  timeconv.c  timeconv.h  vbuf.c  vbuf.h
win32/: w32pst.vcproj
xml/: Doxyfile  Makefile.am  Makefile.in  header.sgml  header.xml  libpst.in
